saved trained model and added way to load model

--- a/causal_vae_dsprites.ipynb
+++ b/causal_vae_dsprites.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,13 +312,49 @@
     "LEARNING_RATE = 1.0e-3\n",
     "\n",
     "# Run only for a single iteration for testing\n",
-    "NUM_EPOCHS = 10\n",
+    "NUM_EPOCHS = 100\n",
     "TEST_FREQUENCY = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IncompatibleKeys(missing_keys=[], unexpected_keys=[])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#################################\n",
+    "### FOR SAVING AND LOADING MODEL\n",
+    "################################\n",
+    "# clear param store\n",
+    "pyro.clear_param_store()\n",
+    "\n",
+    "PATH = \"trained_model.save\"\n",
+    "\n",
+    "# new model\n",
+    "# vae = CVAE(use_cuda=USE_CUDA)\n",
+    "\n",
+    "# save current model\n",
+    "# torch.save(vae.state_dict(), PATH)\n",
+    "\n",
+    "# to load params from trained model\n",
+    "vae = CVAE(use_cuda=USE_CUDA)\n",
+    "vae.load_state_dict(torch.load(PATH))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -326,27 +362,148 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7293198b5014b4f9e5c3f127e4eb72d",
+       "model_id": "4a12b6c267b34b24a0341f61a252e3f3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[epoch 000]  average training loss: 15.2831\n",
+      "[epoch 000] average test loss: 17.6650\n",
+      "[epoch 001]  average training loss: 14.5343\n",
+      "[epoch 002]  average training loss: 13.9415\n",
+      "[epoch 003]  average training loss: 13.4132\n",
+      "[epoch 004]  average training loss: 12.9575\n",
+      "[epoch 005]  average training loss: 12.5879\n",
+      "[epoch 005] average test loss: 13.9519\n",
+      "[epoch 006]  average training loss: 12.2192\n",
+      "[epoch 007]  average training loss: 11.8638\n",
+      "[epoch 008]  average training loss: 11.5776\n",
+      "[epoch 009]  average training loss: 11.2881\n",
+      "[epoch 010]  average training loss: 11.0081\n",
+      "[epoch 010] average test loss: 12.4815\n",
+      "[epoch 011]  average training loss: 11.1047\n",
+      "[epoch 012]  average training loss: 10.5209\n",
+      "[epoch 013]  average training loss: 10.2897\n",
+      "[epoch 014]  average training loss: 10.0783\n",
+      "[epoch 015]  average training loss: 9.8712\n",
+      "[epoch 015] average test loss: 11.8235\n",
+      "[epoch 016]  average training loss: 9.6722\n",
+      "[epoch 017]  average training loss: 9.4888\n",
+      "[epoch 018]  average training loss: 9.3033\n",
+      "[epoch 019]  average training loss: 9.1291\n",
+      "[epoch 020]  average training loss: 8.9643\n",
+      "[epoch 020] average test loss: 10.8259\n",
+      "[epoch 021]  average training loss: 8.8299\n",
+      "[epoch 022]  average training loss: 8.6701\n",
+      "[epoch 023]  average training loss: 8.5306\n",
+      "[epoch 024]  average training loss: 8.3834\n",
+      "[epoch 025]  average training loss: 8.2576\n",
+      "[epoch 025] average test loss: 10.3652\n",
+      "[epoch 026]  average training loss: 23189.7976\n",
+      "[epoch 027]  average training loss: 239.6831\n",
+      "[epoch 028]  average training loss: 7.9007\n",
+      "[epoch 029]  average training loss: 7.7838\n",
+      "[epoch 030]  average training loss: 7.6848\n",
+      "[epoch 030] average test loss: 9.9376\n",
+      "[epoch 031]  average training loss: 7.5722\n",
+      "[epoch 032]  average training loss: 7.4608\n",
+      "[epoch 033]  average training loss: 7.3689\n",
+      "[epoch 034]  average training loss: 7.2695\n",
+      "[epoch 035]  average training loss: 7.1809\n",
+      "[epoch 035] average test loss: 9.7329\n",
+      "[epoch 036]  average training loss: 7.1184\n",
+      "[epoch 037]  average training loss: 6.9998\n",
+      "[epoch 038]  average training loss: 9.3081\n",
+      "[epoch 039]  average training loss: 6.8295\n",
+      "[epoch 040]  average training loss: 7.5134\n",
+      "[epoch 040] average test loss: 9.3493\n",
+      "[epoch 041]  average training loss: 6.6828\n",
+      "[epoch 042]  average training loss: 6.6096\n",
+      "[epoch 043]  average training loss: 6.5347\n",
+      "[epoch 044]  average training loss: 6.4644\n",
+      "[epoch 045]  average training loss: 6.3954\n",
+      "[epoch 045] average test loss: 9.2391\n",
+      "[epoch 046]  average training loss: 6.3359\n",
+      "[epoch 047]  average training loss: 9.6716\n",
+      "[epoch 048]  average training loss: 6.2103\n",
+      "[epoch 049]  average training loss: 6.1419\n",
+      "[epoch 050]  average training loss: 6.0903\n",
+      "[epoch 050] average test loss: 9.0349\n",
+      "[epoch 051]  average training loss: 6.0305\n",
+      "[epoch 052]  average training loss: 5.9678\n",
+      "[epoch 053]  average training loss: 5.9208\n",
+      "[epoch 054]  average training loss: 5.8682\n",
+      "[epoch 055]  average training loss: 5.8106\n",
+      "[epoch 055] average test loss: 8.8320\n",
+      "[epoch 056]  average training loss: 5.7644\n",
+      "[epoch 057]  average training loss: 5.7643\n",
+      "[epoch 058]  average training loss: 5.6610\n",
+      "[epoch 059]  average training loss: 5.6181\n",
+      "[epoch 060]  average training loss: 5.5760\n",
+      "[epoch 060] average test loss: 8.9104\n",
+      "[epoch 061]  average training loss: 5.5301\n",
+      "[epoch 062]  average training loss: 5.4844\n",
+      "[epoch 063]  average training loss: 5.4342\n",
+      "[epoch 064]  average training loss: 5.3990\n",
+      "[epoch 065]  average training loss: 5.3497\n",
+      "[epoch 065] average test loss: 8.8160\n",
+      "[epoch 066]  average training loss: 5.3120\n",
+      "[epoch 067]  average training loss: 5.2713\n",
+      "[epoch 068]  average training loss: 5.2337\n",
+      "[epoch 069]  average training loss: 5.1955\n",
+      "[epoch 070]  average training loss: 5.1590\n",
+      "[epoch 070] average test loss: 8.9201\n",
+      "[epoch 071]  average training loss: 5.1143\n",
+      "[epoch 072]  average training loss: 5.0823\n",
+      "[epoch 073]  average training loss: 5.0486\n",
+      "[epoch 074]  average training loss: 5.0096\n",
+      "[epoch 075]  average training loss: 4.9785\n",
+      "[epoch 075] average test loss: 8.8781\n",
+      "[epoch 076]  average training loss: 4.9415\n",
+      "[epoch 077]  average training loss: 4.9120\n",
+      "[epoch 078]  average training loss: 4.8807\n",
+      "[epoch 079]  average training loss: 4.8462\n",
+      "[epoch 080]  average training loss: 4.8169\n",
+      "[epoch 080] average test loss: 8.9105\n",
+      "[epoch 081]  average training loss: 4.7809\n",
+      "[epoch 082]  average training loss: 4.7538\n",
+      "[epoch 083]  average training loss: 4.7247\n",
+      "[epoch 084]  average training loss: 4.6927\n",
+      "[epoch 085]  average training loss: 4.6726\n",
+      "[epoch 085] average test loss: 8.8387\n",
+      "[epoch 086]  average training loss: 4.6403\n",
+      "[epoch 087]  average training loss: 4.6031\n",
+      "[epoch 088]  average training loss: 4.5867\n",
+      "[epoch 089]  average training loss: 4.5555\n",
+      "[epoch 090]  average training loss: 4.5242\n",
+      "[epoch 090] average test loss: 8.8349\n",
+      "[epoch 091]  average training loss: 4.5004\n",
+      "[epoch 092]  average training loss: 4.4727\n",
+      "[epoch 093]  average training loss: 4.4483\n",
+      "[epoch 094]  average training loss: 4.4288\n",
+      "[epoch 095]  average training loss: 4.3992\n",
+      "[epoch 095] average test loss: 8.9367\n",
+      "[epoch 096]  average training loss: 4.3691\n",
+      "[epoch 097]  average training loss: 4.3501\n",
+      "[epoch 098]  average training loss: 4.3234\n",
+      "[epoch 099]  average training loss: 4.3052\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "# clear param store\n",
-    "pyro.clear_param_store()\n",
-    "\n",
-    "# setup the VAE\n",
-    "# vae = CVAE(use_cuda=USE_CUDA)\n",
     "\n",
     "# setup the optimizer\n",
     "adam_args = {\"lr\": LEARNING_RATE}\n",
@@ -384,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,9 +560,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "18b053b1db954f6291013b96b1e416b3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=0, description='x', max=256), Output()), _dom_classes=('widget-interact'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
