clarified sanity check purpose

--- a/causal_vae_dsprites.ipynb
+++ b/causal_vae_dsprites.ipynb
@@ -774,7 +774,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### sanity check that do-operation should work on trained network"
+    "### sanity check that do-operation should work on trained network\n",
+    "\n",
+    "At one point I was concerned that the network was encoding too much information in the latent encoding z and thus conditioning on the labels wasnt enough to change the output.  According to the results below, that is not the case.  We should be able to condition on the "
    ]
   },
   {
